--- a/.github/workflows/auto_restart.yml
+++ b/.github/workflows/auto_restart.yml
@@ -1,5 +1,5 @@
 name: IBM Cloud Auto Restart
-####
+
 on:
 #  push:
 #    branches: [ master ]
@@ -7,8 +7,8 @@ on:
 #    branches: [ master ]
   schedule:
     - cron: 0 4 * * 5
-#  watch:
-#    types: [started]
+  watch:
+    types: [started]
 
 jobs:
   ibm-cloud-restart:
