--- a/.github/workflows/Auto_Restart.yml
+++ b/.github/workflows/Auto_Restart.yml
@@ -10,6 +10,9 @@ on:
 #  watch:
 #    types: [started]
 
+workflow_dispatch:
+    inputs:
+    
 jobs:
   ibm-cloud-restart:
     runs-on: ubuntu-latest
